fix the banner overlapping with report icon

--- a/src/routes/landing/landing.less
+++ b/src/routes/landing/landing.less
@@ -699,11 +699,11 @@ tr.row.report {
   height: 85px;
   width: 100px;
   overflow: hidden;
-  position: absolute;
-  top: 50%;
 
   @media screen and (max-height: 470px){
     width: 155px;
+    position: absolute;
+    top: 85px;
   }
 }
 
